# mlproject

./: .gitignore  Dockerfile  Dockerfile.streamlit  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
artifacts/: metadata.json  test_metrics.json
reports/: cv_results.csv
src/malware_detector.egg-info/: PKG-INFO  SOURCES.txt
src/malware_detector/api/: app.py  schemas.py
src/malware_detector/data/: date_features.py  load.py  split.py
src/malware_detector/inference/: predictor.py
src/malware_detector/modeling/: evaluate_cv.py  final_train_and_test.py  registry.py  tune_and_test.py
src/malware_static_ml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py
tests/.github/workflows/: ci.yml
tests/integration/: test_api.py
tests/smoke/: test_model_artifact.py  test_streamlit_app.py
tests/unit/: test_metadata.py  test_predictor.py
web/: streamlit_app.py
